# two-tower-model-tutorial

./: .gitignore  LICENSE  Makefile  PIPELINE.md  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt.lastrun
.dvc/: config
models/: .gitignore
src/: dataset.py  evaluate.py  features.py
src/modeling/: data_loader.py  model.py  predict.py  train.py
