[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "Two Tower Model Tutorial"
authors = [
  { name = "u-masao" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true

[tool.poetry]
name = "two-tower-model-tutorial"
version = "0.0.1"
description = "Two Tower Model Tutorial"
authors = ["u-masao"]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.6.17"
mlflow = "^2.16.2"
sentence-transformers = "^3.1.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
cloudpickle = "^3.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"
dvc = "^3.55.2"

